# FastAPI-Ollama-gpt-oss-20b

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
